@startuml
'https://plantuml.com/class-diagram

class Main

abstract class Game{
   - bossNumber
   # bossNeeded:boolean
   # enemyMaxNumber:int
   # eliteChance:double
   # bossLimit:int
   # hpAdded:int
   # {abstract} initialise():void
   # {abstract} getHpAdded(int bossNumber):int
   # {abstract} getDifficulty(int time):double
}

Game <|-- EasyGame
Game <|-- NormalGame
Game <|-- HardGame
Main ..> Game

class EasyGame{
    # initialise():void
    # getHpAdded(int bossNumber):int
    # getDifficulty(int time):double
}

class NormalGame{
    # initialise():void
    # getHpAdded(int bossNumber):int
    # getDifficulty(int time):double
}

class HardGame{
    # initialise():void
    # getHpAdded(int bossNumber):int
    # getDifficulty(int time):double
}

@enduml